# automation

./: .gitignore  README.md  generate_session.py  ghost.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.txt  send_signal.py  session.session
.github/workflows/: ci.yml  telegram.yml
__pycache__/: send_signal.cpython-312.pyc.2698735123344
src/ghost/: cli.py  config.py  messages.py  plan.py  promo.py  proof.py  sender.py  state.py
tests/: test_messages.py  test_promo.py  test_proof.py  test_sender.py  test_state.py
