[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-signal"
version = "0.1.0"
description = "Telegram trading signal sender."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["telethon>=1.34.0", "Pillow>=10.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
ghost-send = "ghost.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
